# libelas

./: CMakeLists.txt  README.TXT
rectdetect/: oclimgutil_cl.h  oclpolyline_cl.h  oclrect_cl.h  vidrect.cpp
src/: elas.h  main.cpp
